# hdb-resale

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
conf/: hdb_resale_config.yaml
hdb_resale/: __init__.py  api.py  data.py  model.py  sql.py  utils.py
hdb_resale/task/: __init__.py  get_data.py  process_data.py  train_model.py
notebooks/hdb_resale/: data_download.ipynb  data_processing.ipynb  mlflow.ipynb
